Mon May 22 22:18:44 2006  Tim Janik  <timj@gtk.org>

	* slowtests/filecheck/checkproject.scm: CVS moved here from slowtests/.

Sun May 21 17:06:40 2006  Tim Janik  <timj@gtk.org>

	* slowtests/audio/bse2wav.scm: scheme script to record BSE files to WAV
	files, based on bse-scm-glue.boot. properly check command line args,
	display progress and errors.

	* slowtests/audio/Makefile.am: use bse2wav.scm, fixup $(srcdir) 
	relative file names. disable minisong-test: which requires bsewave
	file loading from a dir other than CWD.

	* bsetowav.scm: removed, superceeded by bse2wav.scm.

	* slowtests/filecheck/Makefile.am: naming fixup.

	* Makefile.am: more distcheck rule fixes.

Sat May 20 15:34:05 2006  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstmain.c: fixed up --help messgae.

	* beast-gtk/bststest.c:
	* tools/bsefextract.cc:
	* tools/bsewavetool.cc:
	* tools/magictest.c:
	* tools/mathtool.c:
	* beast-gtk/bstmain.c: adapted to refactored BSE initialization.

	* tools/bsewavetool.cc:
	* tools/magictest.c:
	* tools/mathtool.c:
	* tools/bsefextract.cc: prevent rcfile loading.

	* configure.in: generate slowtests/filecheck/Makefile.

	* slowtests/Makefile.am: removed BSE filecheck.

	* slowtests/filecheck/Makefile.am: added BSE filecheck from slowtests/.

	* Makefile.am: echo a banner when all tests passed.

	* library/demo/partymonster.bse:
	* library/demo/x2-midi-test.bse:
	* test/midi-test.bse: 
	* test/osc-test.bse: converted to 0.7.0.

Fri May 19 17:51:33 2006  Tim Janik  <timj@gtk.org>

	* slowtests/audio/Makefile.am: fixed audio test rules, run audio
	tests upon make check.

Fri May 19 17:48:27 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* web/Makefile.am: Reorder tar options so that make site-preview works
	with GNU tar-1.15.1, too.

Thu May 18 13:39:08 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* slowtests/audio/Makefile.am: Added frowzy-drums.bsewave. Fixed up
	plugin dirs to include location of the freeverb plugin.
